# heart-disease-research

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example-predict.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
airflow/dags/: heart-disease-data-pipeline.py  heart-disease-ml-training-pipeline.py
airflow/data_pipeline/: data_pipeline.py
bentoml/: Dockerfile  import_model_into_bentoml.py  requirements.txt  service.py
bentoml/mlruns/0/: meta.yaml
dags/: heart-disease-data-pipeline.py  heart-disease-ml-training-pipeline.py
data/: onehotencoder.pkl  scaler.pkl  test_data.csv  train_data.csv
data_pipeline/: data_pipeline.py
heart-disease-predictor-app/: Dockerfile  package-lock.json  package.json
heart-disease-predictor-app/src/: App.css  App.js
kubernetes/airflow/: values.yaml
kubernetes/airflow/templates/: requirements-config-map.yaml
kubernetes/airflow/templates/worker/: statefulset.yaml
kubernetes/bentoml/: Chart.yaml  values.yaml
kubernetes/bentoml/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kubernetes/bentoml/templates/tests/: test-connection.yaml
kubernetes/frontend/: values.yaml
kubernetes/mlflow/: values.yaml
mlflow_data/: mlflow.db
mlflow_data/mlruns/0/4321b950fff84fd383d45100667109df/artifacts/random_forest_model/: MLmodel
mlflow_data/mlruns/0/6915689da24142a183423242a93be362/artifacts/random_forest_model/: MLmodel  model.pkl
terraform/: artifact_store.tf  main.tf  vnet.tf
(+8 files in other folders)
